--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "elasticsearch/elasticsearch": "~6.0",
         "encore/laravel-admin": "1.7.3",
         "fideloper/proxy": "^4.0",
+        "hieu-le/active": "~3.5",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
