--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1",
         "yansongda/pay": "^2.8"
